simpleapi changelog
===================

Version 0.0.6
-------------

[current development version]

- various bugfixes
- huge doc improvements (docs will be published on simpleapi.de)

Version 0.0.5
-------------

- various bugfixes
- added serialize()-method (see example project 3 for more)
- added preformatter for inline objects like Model-instances, QuerySets, etc.
- new requirement: python-dateutil
- XML can now transport datetime/date/time-objects

Version 0.0.4
-------------

- various bugfixes
- method return values can now be Model-Objects or QuerySet-Objects (they will
  be automatically serialized)
- new XML formatter (thanks to Digitalxero)
- entirely new XML builder/parser

Version 0.0.3
-------------

- various bugfixes
- entirely rewritten from scratch
- new Request/Response-objects
- new Feature-system (with built-in features: throttling, caching)
- new Wrapper-system (with built-in wrappers: ExtJSFormWrapper for use with 
  ExtJS forms)

Version 0.0.2
-------------

- various bugfixes

Version 0.0.1
-------------

First initial release. 