@@ -16,10 +16,11 @@ __all__ = ('Route', )
 class RouteException(Exception): pass
 class Route(object):
 
-    def __init__(self, *namespaces):
+    def __init__(self, *namespaces, **kwargs):
         """Takes at least one namespace. 
         """
         self.nmap = {}
+        self.restful = kwargs.get('restful', False)
 
         for namespace in namespaces:
             self.add_namespace(namespace)
@@ -216,8 +217,10 @@ class Route(object):
 
         return version
 
-    def __call__(self, http_request):
+    def __call__(self, http_request, **urlparameters):
         request_items = dict(http_request.REQUEST.items())
+        request_items.update(urlparameters)
+        
         version = request_items.pop('_version', 'default')
         callback = request_items.pop('_callback', None)
         output_formatter = request_items.pop('_output', None)
@@ -284,7 +287,8 @@ class Route(object):
                 output_formatter=output_formatter_instance,
                 wrapper=wrapper_instance,
                 callback=callback,
-                mimetype=mimetype
+                mimetype=mimetype,
+                restful=self.restful
             )
             response = request.run(request_items)
             http_response = response.build()
